// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkTooltip should render correctly 1`] = `
<DocumentFragment>
  <section
    class="bpk-tooltip"
    id="my-popover"
    role="dialog"
    tabindex="-1"
  >
    <span
      class="bpk-tooltip__arrow"
      data-popper-arrow="true"
      id="js-bpk-popover-arrow"
      role="presentation"
    />
    <div
      class="bpk-tooltip__inner bpk-tooltip__inner--padded"
    >
      My tooltip content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkTooltip should render correctly with "className" attribute 1`] = `
<DocumentFragment>
  <section
    class="bpk-tooltip my-custom-class"
    id="my-tooltip"
    role="dialog"
    tabindex="-1"
  >
    <span
      class="bpk-tooltip__arrow"
      data-popper-arrow="true"
      id="js-bpk-popover-arrow"
      role="presentation"
    />
    <div
      class="bpk-tooltip__inner bpk-tooltip__inner--padded"
    >
      My tooltip content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkTooltip should render correctly with "padded" attribute equal to false 1`] = `
<DocumentFragment>
  <section
    class="bpk-tooltip"
    id="my-tooltip"
    role="dialog"
    tabindex="-1"
  >
    <span
      class="bpk-tooltip__arrow"
      data-popper-arrow="true"
      id="js-bpk-popover-arrow"
      role="presentation"
    />
    <div
      class="bpk-tooltip__inner"
    >
      My tooltip content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkTooltip should render correctly with type=dark 1`] = `
<DocumentFragment>
  <section
    class="bpk-tooltip"
    id="my-popover"
    role="dialog"
    tabindex="-1"
  >
    <span
      class="bpk-tooltip__arrow bpk-tooltip__arrow--dark"
      data-popper-arrow="true"
      id="js-bpk-popover-arrow"
      role="presentation"
    />
    <div
      class="bpk-tooltip__inner bpk-tooltip__inner--dark bpk-tooltip__inner--padded"
    >
      My tooltip content
    </div>
  </section>
</DocumentFragment>
`;
